--- a/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
@@ -38,9 +38,9 @@
                                         <td>{{item.plannedEndDate | date:dateFormat}}</td>
                                         <td>{{item.observationCount}}</td>
                                         <td></td>
-                                        <td><button class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.score}}</button></td>
+                                        <td>  <p><b>{{item.score}}</b></p></td>
                                         <td>
-                                            <button (click)="goToCategory(item.id)" class="btn btn-primary"data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.actionPlanStatus}}</button>
+                                            <button (click)="goToCategory(item.id)"  [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted' }">{{item.actionPlanStatus}}</button>
                                         </td>
                                     </tr>
                                 </tbody>
