--- a/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
@@ -5,11 +5,16 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card">
-                            <h3 class="card-title">Audit Area Details</h3>
+                            <h3 class="card-title">Audit Plan ( Evidence Submission )</h3>
                             <div class="d-flex align-items-center">
-                                <h6 class="mr-1 mb-0">Filters:-</h6>
-                                <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name">
-                                <input type="text" class="form-control mr-1 filter_css" placeholder="Date">
+                                <div class=" mr-1">
+                                    <label class="filter_label">From Date</label>
+                                  <input type="date" [(ngModel)]="plannedStartDate" class="form-control  filter_css" placeholder="Date ">
+                                </div>
+                               <div class=" mr-1">
+                                    <label class="filter_label">To Date</label>
+                                  <input type="date" [(ngModel)]="plannedEndDate" class="form-control filter_css" placeholder="Date ">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -20,7 +25,6 @@
                                     <tr class=" text-center sticky_header">
                                         <th>Audit No</th>
                                         <th>Vendor Code </th>
-                                        <th>Vendor Name</th>
                                         <th>Planned Start Date </th>
                                         <th>Planned End Date</th>
                                         <th>No Of Observation</th>
@@ -32,13 +36,13 @@
                                     <tr class="tbody_data" *ngFor="let item of auditPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                                         <td>{{item.auditNumber}}</td>
                                         <td>{{item.vendorCode}}</td>
-                                        <td>{{item.vendorName}}</td>
                                         <td>{{item.plannedStartDate | date:dateFormat}}</td>
                                         <td>{{item.plannedEndDate | date:dateFormat}}</td>
                                         <td>{{item.observationCount}}</td>
-                                        <td><button class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.score}}</button></td>
+                                        <td> <p><b>{{item.score}}</b></p></td>
                                         <td>
-                                            <button (click)="goToCategory(item.id)" class="btn btn-primary"data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.actionPlanStatus}}</button>
+                                            <button (click)="goToCategory(item.id)" 
+                                            [ngClass]="{'submit': item.actionPlanStatus === 'Submitted', 'to_be_submit' : item.actionPlanStatus === 'To be Submitted' }">{{item.actionPlanStatus}}</button>
                                         </td>
                                     </tr>
                                 </tbody>
