--- a/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-summary/manage-audit-summary.component.html
@@ -11,7 +11,7 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success">Download PDF ( WIP )</button>
               </div>
             </div>
             <div class="card-body">
@@ -25,7 +25,7 @@
                       <th>Concerning regulation</th>
                       <th>Judgment</th>
                       <th>Remarks</th>
-                      <th>Follow</th>
+                      <th>View Image</th>
                     </tr>
                   </thead>
                   <tbody class="text-center">
@@ -96,7 +96,7 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success">Download PDF ( WIP )</button>
               </div>
             </div>
             <div class="card-body">
@@ -228,7 +228,7 @@
             <div class="card-header">
               <div class="header_card">
                 <h3 class="card-title">Audit Area Details </h3>
-                <button class="btn btn-success">Download PDF</button>
+                <button class="btn btn-success">Download PDF ( WIP )</button>
               </div>
             </div>
             <div class="card-body">
