--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <div class="header_card">
-            <h3 class="card-title">Regulation for initial production control </h3>
+            <h3 class="card-title">{{categoryName}}</h3>
         </div>
     </div>
     <div class="card-body">
