--- a/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-vendor/action-plan-vendor.component.html
@@ -6,7 +6,7 @@
                     <div class="card-header">
                         <div class="header_card">
                             <h3 class="card-title">Audit Plan ( Evidence Submission )</h3>
-                            <div class="d-flex align-items-center">
+                           <!--  <div class="d-flex align-items-center">
                                 <div class=" mr-1">
                                     <label class="filter_label">From Date</label>
                                   <input type="date" [(ngModel)]="plannedStartDate" class="form-control  filter_css" placeholder="Date ">
@@ -15,7 +15,7 @@
                                     <label class="filter_label">To Date</label>
                                   <input type="date" [(ngModel)]="plannedEndDate" class="form-control filter_css" placeholder="Date ">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="card-body">
