--- a/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
+++ b/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
@@ -9,10 +9,10 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive max_hei_table">
+                        <div class="table-responsive max_hei_table-400">
                             <table id="" class="table table-bordered table-hover">
                                 <thead>
-                                    <tr class=" text-center sticky_header">
+                                    <tr class="sticky_header">
                                         <th>S.No</th>
                                         <th>Categories </th>
                                         <th>Observation</th>
