--- a/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive max_hei_table" >
+        <div class="table-responsive max_hei_table-400" >
             <table id="" class="table table-bordered table-hover">
                 <thead>
                     <tr class="text-center">
@@ -27,10 +27,10 @@
                         <td><p class="show">{{item.auditArea}}</p></td>
                         <td><p class="show">{{item.regulationText}}</p></td>
                         <td>{{item.remark}}</td>
-                        <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control width-300"></textarea></td>
+                        <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control width-300 "></textarea></td>
                         <td><textarea [(ngModel)]="item.incharge" class="form-control width-300"></textarea>
                         </td>
-                        <td ><input  [min]="minStartDate" [(ngModel)]="item.dateOfSubmission" type="date"></td>
+                        <td ><input  [min]="minStartDate" [(ngModel)]="item.dateOfSubmission" class="inputbox_css-date" type="date"></td>
                     </tr>
                 </tbody>
             </table>
